# AlphaExpansion

./: .gitignore  AlphaExpansion.cpp  AlphaExpansion.h  CMakeLists.txt  README.md  autre_main.cpp  build.sh  check_labels.py  graph.h  label_ref.txt  main.cpp  pushrelabel.h  subsample_example.py  test.cpp
data/large/: edges.txt  nodes.txt
data/medium/: edges.txt
python/: CMakeLists.txt  bindings.cpp  setup.py  test.py
